# ml2_final_assigment

./: .gitignore  README.md
app/: README.md  app.py  pyproject.toml
app/output/: __init__.py  models.py  services.py
app/tweets/: __init__.py  exceptions.py  models.py  services.py
data/test/: CR.tsv  MX.tsv  PE.tsv  UY.tsv
data/testgold/: cr.tsv  mx.tsv  pe.tsv  uy.tsv
notebooks/: PCA.ipynb  data_preparation.ipynb  data_preparation.py  df_all.csv
